<resources>
    <string name="app_name">Your-Health</string>
    <string name="tipocita">Por favor seleccione el tipo\nde cita que desea solicitar.\n\nG -> Consulta general.\nE-> Consulta especializada.</string>
    <string name="tipoDos">G</string>
    <string name="tipoUno">E</string>
    <string name="str_image_splash">https://proyectosyjpro.000webhostapp.com/animation.mp4</string>
    <string name="str_image_login">https://cdn.dribbble.com/users/2008861/screenshots/5969275/did-doctor-for-dribs.gif</string>
    <string name="tabPacienteOpcionUno">Crear cita</string>
    <string name="tapPacienteOpcionDos">Mis citas</string>
    <string name="tabPacienteOpcionTres">Ordenes </string>
    <string name="tabPacienteOpcionCuatro">Perfil</string>
    <string name="textFecha">Por favor selecciona la fecha en la que asistiras la consulta medica.</string>
    <string name="siguiente">Siguiente</string>
    <string name="atras">Atras</string>
    <string name="textDoctor">Por favor seleccione el medico\nde preferencia.</string>
    <string name="textSeleccionHora">Por favor seleccione la \nhora de preferencia.</string>
    <string name="nombre">Nombre</string>
    <string name="detalle">Detalle</string>
    <string name="lugar">Lugar:</string>
    <string name="fechaMaximaCalendarView">12/31/2021</string>
    <string name="textTipoCita">Por favor selecciona el tipo de cita\n especializada que deseas solicitar.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameStorage">appconfig</string>
    <string name="strStatus">isLogin</string>
    <string name="idUser">ID</string>
    <string name="confirmarCita">\n¿Estas seguro de crear esta cita?</string>
    <string name="confirmar">"Sï "</string>
    <string name="denegar">Cancelar</string>
    <string name="titleConfirmar">Detalles Cita</string>
    <string name="tipoGeneral">G</string>
    <string name="nombreGeneral">Cita general</string>
    <string name="detalleGeneral">Cita para diagnostico genral del cuerpo</string>
    <string name="UrlCitaGeneral">https://uploadgerencie.com/2019/cita-medica.jpg</string>
    <string name="mensajeEnvioSolicitud">Se ha enviado la solicitud de cita, mira en mis citas para revisar el estado</string>
    <string name="textDetalleTipoCita">"Tipo de cita:  "</string>
    <string name="textDetalleFecha">\n  Fecha :</string>
    <string name="textConDocM">\n Con el Doctor o Doctora:</string>
    <string name="textHora">"\n Hora: "</string>
    <string name="textLugar">"\n Lugar: "</string>
    <string name="textSeleccionCita">Historial de citas solicitadas</string>
    <string name="fotoOdontologia">https://i.pinimg.com/originals/49/a6/5e/49a65ec50cdea2288d863c44286753c1.png</string>
    <string name="fotoFisioterapia">https://image.freepik.com/vector-gratis/rehabilitacion-fisioterapia-personas-coleccion-iconos-planos_1284-15880.jpg</string>
    <string name="textPaciente">Paciente</string>
    <string name="textPendiente">Pendiente</string>
    <string name="textSpinner">Seleccione su tipo de documento</string>
    <string name="tectErrorCredenciales">Error de credenciales. Intenta de nuevo o consulta con el administrador de tu centro de salud</string>
    <string name="errorDatosVacios">Debes completar todos los datos para iniciar sesión</string>
    <string name="textInicio">Iniciar</string>
    <string name="textPassword">Contraseña</string>
    <string name="textCitasDoctor">Selecciona una cita medica\n para ver detalles</string>
    <string name="textNumeroDoc">Número de Documento</string>
    <string name="idTipoDoc">TipoDocumento</string>
    <string name="itemUnoTabDoctor">Ver Citas</string>
    <string name="itemDosTabDoctor">Crear\n Formula Médica</string>
    <string name="textInicioFormulas">Selecciona una de las formulas para ver detalles.</string>
    <string name="textMedico">Medico</string>
    <string name="textRol">ROl</string>
    <string name="textInfoCita">Infromación de cita medica.</string>
    <string name="terminarcita">Marcar cita como finalizada.</string>
    <string name="citaFinalizada">Cita Finalizada.</string>
    <string name="citaTerminada">Se ha marcado la cita como finalizada.</string>
    <string name="textEdad">"Fecha de nacimiento: "</string>
    <string name="textSexo">"Sexo: "</string>
    <string name="textCerrar">Cerrar sesión</string>
    <string name="textActualizardatos">Para actualizar tus datos debes contactar con el administrador del centro de salud.</string>
    <string name="textAdminPacientes">Lista\nde Pacientes</string>
    <string name="textAdminMedico">Lista\n de Medicos</string>
    <string name="textAdmin">Citas Medicas    </string>
    <string name="textPacienteSwitch">PE</string>
    <string name="textDoctorSwitch">DR</string>
    <string name="textCrear">Crear</string>
    <string name="textSwitchAdmin">Por favor seleccione el tipo de usuario que desea visualizar.\n   Paciente: PE\n   Doctor: DR</string>
    <string name="itemUnoTabAdmin">Usuarios</string>
    <string name="itemDosTabAdmin">Gestionar\nCitas</string>
    <string name="itemTresTabAdmin">Crear</string>
    <string name="idAdmin">Administrador</string>
    <string name="textMenu">Menu</string>
    <string name="textAnadirPaciente">Crear nuevo Paciente </string>
    <string name="texAnadirDoctor">Crear nuevo Personal Médico</string>
    <string name="textclick">Click para ver detalles del usuario.</string>
    <string name="textTelefono">Número de celular</string>
    <string name="textemail">Correo electronico</string>
    <string name="mensajeDialogoFoto">Elige por cuál media deseas añadir la foto de usuario</string>
    <string name="textTomarFoto">Tomar Foto</string>
    <string name="textGaleria">Seleccionar foto de galeria</string>
    <string name="textCambiarContraseña">Cambiar contraseña</string>
    <string name="textModificar">Actualizar datos</string>
    <string name="confrmarSeleccionTipoCita">¿Desea añadir %1$s a las areas de trabajo del medico %2$s?, acepte para añadir lugares y horas de atención al area de trabajo seleccionada.</string>
    <string name="confirmarSeleccionCupo"> Información de Cupo:\n Hora:  %1$s \n Lugar: %2$s\n ¿Desea añadirlo al medico %3$s ?</string>
    <string name="textElegirTipoCitaDoctorAdmin"> Por favor selecciona las areas de atención\n del médico que quieres crear.\n Luego selecciona los cupos de atención.</string>
    <string name="textElegirCupoAdmin">Por favor selecciona los cupos(horario de atención y lugar) que asignaras al medico que dara la cita seleccionada.\n Para finalizar la creación del médico selecciona crear, si desea añadir otra area de trabajo, seleccione atras.</string>
    <string name="textAgregadoCita">Se ha añadido a las areas de trabajado del médico.</string>
    <string name="textAgregadoCupo">Se ha añadido a los cupos del médico</string>
    <string name="crearCupo">Crear cupo</string>
    <string name="crearTipoCita">Regisrar tipo de Cita</string>
    <string name="verPerfil">Perfil</string>
    <string name="detalleCita">Detalles de la cita medica seleccionada</string>
    <string name="informaciontipocita">Información Tipo de cita</string>
    <string name="cupo">Información Cupo</string>
    <string name="aceptarCita">Aceptar Cita</string>
    <string name="rechazarCita">Rechazar cita</string>
    <string name="aprobado">Aprobado</string>
    <string name="desaprobado">Desaprobado</string>
    <string name="nombreMedicamento">Nombre del medicamento</string>
    <string name="Dosis"></string>
    <string name="cantidad">Cantidad</string>
    <string name="detalleMedicamento">Por favor digite la dosis del medicamento y una breve descripción del mismo.</string>
    <string name="guardarCambios">Enviar</string>
    <string name="anadir">Añadir</string>


    <!-- Strings database -->

    <string name="nameServerD">192.168.1.6</string>
    <string name="nameServer">dinamizate.000webhostapp.com</string>
    <string name="gestionMedicamentos">http://%1$s/YourHealthWebService/registromedicamento.php?tipoConsulta=%2$s&amp;extra=%3$s</string>
    <string name="urlLogin">http://%1$s/YourHealthWebService/loginUsuario.php?tipoDocumento=%2$s&amp;numeroDocumento=%3$s&amp;contrasenaUsuario=%4$s</string>
    <string name="urlRegistroUsuario">http://%1$s/YourHealthWebService/registarUsuario.php</string>
    <string name="urlRegistroUsuarioM">http://%1$s/YourHealthWebService/xdxdxdx.php</string>
    <string name="urlOperacionesCita">http://%1$s/YourHealthWebService/registocita.php</string>
    <string name="obtenerDatos">http://%1$s/YourHealthWebService/obtenerDatos.php?entidad=%2$s&amp;institucion=%3$s&amp;extra=%4$s</string>
    <string name="urlRegistroTipoCitaYCupo">http://%1$s/YourHealthWebService/registrocupoytipocita.php</string>
    <string name="actualizarCita">http://%1$s/YourHealthWebService/actualizarestadocita.php?idcitamedica=%2$s&amp;estado=%3$s&amp;idAdministrador=%4$s</string>
    <string name="urlBase">http://%1$s/YourHealthWebService/</string>
    <string name="obtenerCitasyMedicamentos">http://%1$s/YourHealthWebService/citasmedicopaciente.php?entidad=%2$s&amp;tipoUsuario=%3$s&amp;extra=%4$s&amp;institucion=%5$s</string>
    <string name="cargando">Cargando...</string>
    <string name="suarioNoEncontrado">No se encontro un usuario con las credeciales digitadas</string>
    <string name="bienvenido">Bienvenido %1$s</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="noDisponible">nodisponible</string>
    <string name="aniosExp">Seleccione el numero de años de experiencia del Médico en esta area de atención</string>
    <string name="enespera">Esperando confirmacion</string>
    <string name="preguntaMedicamentos">¿Desea asignar medicamento al paciente?</string>
    <string-array name="tiposDocumentos">
        <item>Seleccione un tipo de documento</item>
        <item>Registro Civil</item>
        <item>Tarjeta de identidad.</item>
        <item>Cedula de Ciudadania</item>
        <item>Cédula de extranjería</item>
        <item>Pasaporte</item>
        <item>Identificacion laboral</item>
    </string-array>
    <!-- Nombres Atributos usuario -->
    <string-array name="tipoSexo">
        <item>Selecciona el sexo del usuario</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="atributosUsuario">
        <item>numeroDocumento</item>
        <item>tipoDocumento</item>
        <item>nombreUsuario</item>
        <item>fechaNacimientoUsuario</item>
        <item>sexoUsuario</item>
        <item>correoUsuario</item>
        <item>contrasenaUsuario</item>
        <item>telefonoUsuario</item>
        <item>institucion</item>
        <item>fotoPerfilUsuario</item>
        <item>tipoUsuario</item>
    </string-array>

</resources>
