<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".pantallasinicio.InicioPaciente">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabPaciente"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="@drawable/toolt"
        app:tabGravity="fill"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabTextColor="#F6F0F0">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabPacienteOpcionUno" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tapPacienteOpcionDos" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabPacienteOpcionTres" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabPacienteOpcionCuatro" />
    </com.google.android.material.tabs.TabLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/paginas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>