<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutUsuarios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentosAdmin.Usuarios">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fonndoinicioadmin">

        <Switch
            android:id="@+id/seleccionUsuario"
            android:layout_width="80dp"
            android:layout_height="46dp"
            android:background="@drawable/buttonshape"
            android:scaleX="1"
            android:scaleY="1"
            android:showText="true"
            android:textOff="@string/textDoctorSwitch"
            android:textOn="@string/textPacienteSwitch"
            android:textSize="36sp"
            android:textStyle="bold"
            android:theme="@style/SCBSwitch"
            android:thumb="@drawable/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="244dp"
            android:layout_height="78dp"
            android:gravity="left"
            android:text="@string/textSwitchAdmin"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" />

        <androidx.cardview.widget.CardView
            android:layout_width="377dp"
            android:layout_height="593dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.823">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listaUsuarios"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menuButton"
            android:layout_width="239dp"
            android:layout_height="146dp"
            android:elevation="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.912"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.972"
            app:menu_fab_label="@string/textMenu"
            app:menu_fab_size="normal">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnPaciente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/verusuarios"
                app:fab_label="@string/textAnadirPaciente" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnMedico"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/doctor"
                app:fab_label="@string/texAnadirDoctor" />


        </com.github.clans.fab.FloatingActionMenu>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>