<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tool">

    <EditText
        android:id="@+id/detallemedicamento"
        android:layout_width="344dp"
        android:layout_height="98dp"
        android:background="@drawable/editnight"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/detalleMedicamento"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medicamentosagregados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <EditText
        android:id="@+id/nombremedicamento"
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:background="@drawable/editnight"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombreMedicamento"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medicamentosagregados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <EditText
        android:id="@+id/cantidadmedicamento"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:background="@drawable/editnight"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/cantidad"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medicamentosagregados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medicamentosagregados"
        android:layout_width="406dp"
        android:layout_height="373dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <ImageButton
        android:id="@+id/cerrarmedicamentos"
        android:layout_width="65dp"
        android:layout_height="67dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@drawable/cancelar" />

    <Button
        android:id="@+id/anadirmedicamentos"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="127dp"
        android:layout_height="42dp"
        android:background="@drawable/buttonshape"
        android:text="@string/textCrear"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <Button
        android:id="@+id/guardar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="127dp"
        android:layout_height="42dp"
        android:background="@drawable/buttonshape"
        android:text="@string/guardarCambios"
        android:textColor="#673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />
</androidx.constraintlayout.widget.ConstraintLayout>