<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="18dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/itemnombremedicamento"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="258dp"
                android:layout_height="43dp"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/nombreMedicamento"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />

            <TextView
                android:id="@+id/itemcantidadmedicamento"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="258dp"
                android:layout_height="43dp"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/cantidad"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.522" />

            <TextView
                android:id="@+id/itemdetallemedicamento"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="259dp"
                android:layout_height="119dp"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/detalleMedicamento"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.804" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="210dp"
                android:layout_height="170dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.051"
                app:srcCompat="@drawable/farmaco" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>