<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgroundlogin"
    tools:context=".Login">

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:background="@drawable/buttonshape"
        android:elevation="4dp"
        android:text="@string/textInicio"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPass"
        app:layout_constraintVertical_bias="0.161" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="223dp"
        android:layout_height="45dp"
        android:background="@drawable/editnight"
        android:elevation="4dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/textPassword"
        android:inputType="textPassword"
        android:shadowColor="@android:color/darker_gray"
        android:textColor="#F8F6F6"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <EditText
        android:id="@+id/editCedula"
        android:layout_width="223dp"
        android:layout_height="45dp"
        android:background="@drawable/editnight"
        android:elevation="4dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/textNumeroDoc"
        android:inputType="text"
        android:shadowColor="@android:color/darker_gray"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageLogin"
        app:layout_constraintVertical_bias="0.583" />

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="0dp"
        android:layout_height="243dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/logo"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/blanco" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="195dp"
        android:layout_height="38dp"
        android:elevation="4dp"
        android:gravity="center"
        android:text="Inicio de Sesión"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageLogin"
        app:layout_constraintVertical_bias="0.397" />

    <Spinner
        android:id="@+id/spinnerTipoDoc"
        android:layout_width="249dp"
        android:layout_height="49dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageLogin"
        app:layout_constraintVertical_bias="0.503" />


</androidx.constraintlayout.widget.ConstraintLayout>